--- a/add_member.html
+++ b/add_member.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Add Member - Gym Management</title>
+  <link rel="icon" type="image/x-icon" href="gym.avif">
   <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js"></script>
