--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Gym Management System - Login/Register</title>
+  <link rel="icon" type="image/x-icon" href="gym.avif">
   <style>
     body {
       font-family: Arial, sans-serif;
