--- a/logout.html
+++ b/logout.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Logging out...</title>
+  <link rel="icon" type="image/x-icon" href="gym.avif">
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js";
     import { getAuth, signOut } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-auth.js";
