--- a/manage_members.html
+++ b/manage_members.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Manage Members</title>
+  <link rel="icon" type="image/x-icon" href="gym.avif">
   <script type="module" src="script/manage_members.js"></script>
   <style>
     body {
