--- a/my_profile.html
+++ b/my_profile.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>My Profile - Member</title>
+  <link rel="icon" type="image/x-icon" href="gym.avif">
   <style>
     body { font-family: Arial, sans-serif; padding: 20px; max-width: 600px; margin: auto; }
     h1 { text-align: center; }
