--- a/user.html
+++ b/user.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>User Dashboard</title>
+  <link rel="icon" type="image/x-icon" href="gym.avif">
   <style>
     body {
       font-family: Arial, sans-serif;
