--- a/assign_package.html
+++ b/assign_package.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Assign Fee Package - Admin</title>
+  <link rel="icon" type="image/x-icon" href="gym.avif">
   <style>
     body { font-family: Arial, sans-serif; padding: 20px; max-width: 450px; margin: auto; background: #f9f9f9; }
     h2 { text-align: center; margin-bottom: 25px; }
