--- a/monthly-report.html
+++ b/monthly-report.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Monthly Report</title>
+  <link rel="icon" type="image/x-icon" href="gym.avif">
   <style>
     body { font-family: Arial, sans-serif; background: #f0f0f0; padding: 20px; }
     .container { max-width: 800px; margin: auto; background: #fff; padding: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
