--- a/notifications.html
+++ b/notifications.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Send Notifications - Admin</title>
+  <link rel="icon" type="image/x-icon" href="gym.avif">
   <style>
     body { font-family: Arial, sans-serif; padding: 20px; max-width: 600px; margin: auto; background: #f9f9f9; }
     h2 { text-align: center; }
