--- a/supplement_store.html
+++ b/supplement_store.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <title>Admin - Supplement Store</title>
+<link rel="icon" type="image/x-icon" href="gym.avif">
 <style>
   body { font-family: Arial, sans-serif; max-width: 900px; margin: auto; padding: 20px; }
   table { width: 100%; border-collapse: collapse; margin-top: 20px; }
