--- a/view-notifications.html
+++ b/view-notifications.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>View Notifications</title>
+  <link rel="icon" type="image/x-icon" href="gym.avif">
   <style>
     body { font-family: Arial, sans-serif; padding: 20px; background: #f4f4f4; }
     h2 { text-align: center; }
