--- a/add_member.html
+++ b/add_member.html
@@ -8,76 +8,92 @@
   <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js"></script>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: #f1f1f1;
-      margin: 0;
-      padding: 0;
-    }
+  font-family: 'Segoe UI', sans-serif;
+  margin: 0;
+  padding: 0;
+  background-image: url('images/member.avif'); /* Replace with your actual image path */
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  color: #fff;
+}
 
-    .header {
-      background-color: #343a40;
-      color: white;
-      padding: 15px 20px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
+.header {
+  background-color: rgba(0, 0, 0, 0.85);
+  color: #fff;
+  padding: 15px 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 2px solid #ff3333;
+}
 
-    .header h2 {
-      margin: 0;
-    }
+.header h2 {
+  margin: 0;
+  font-weight: bold;
+  letter-spacing: 1px;
+}
 
-    .container {
-      max-width: 500px;
-      margin: 40px auto;
-      background: white;
-      padding: 30px;
-      border-radius: 10px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-    }
+.container {
+  max-width: 500px;
+  margin: 60px auto;
+  background-color: rgba(0, 0, 0, 0.9);
+  padding: 35px;
+  border-radius: 15px;
+  box-shadow: 0 0 20px rgba(255, 0, 0, 0.3);
+}
 
-    label {
-      display: block;
-      margin-bottom: 8px;
-      margin-top: 15px;
-    }
+label {
+  display: block;
+  margin-bottom: 8px;
+  margin-top: 18px;
+  color: #ff4d4d;
+  font-weight: 600;
+}
 
-    input, select {
-      width: 100%;
-      padding: 10px;
-      margin-top: 5px;
-      border-radius: 5px;
-      border: 1px solid #ccc;
-    }
+input, select {
+  width: 100%;
+  padding: 12px;
+  margin-top: 5px;
+  border-radius: 8px;
+  border: 1px solid #ccc;
+  background-color: #f9f9f9;
+  color: #000;
+  font-size: 15px;
+}
 
-    button {
-      margin-top: 20px;
-      background-color: #28a745;
-      color: white;
-      border: none;
-      padding: 12px;
-      width: 100%;
-      border-radius: 5px;
-      cursor: pointer;
-      font-size: 16px;
-    }
+button {
+  margin-top: 25px;
+  background-color: #e60000;
+  color: white;
+  border: none;
+  padding: 14px;
+  width: 100%;
+  border-radius: 8px;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: bold;
+  transition: background-color 0.3s;
+}
 
-    button:hover {
-      background-color: #218838;
-    }
+button:hover {
+  background-color: #cc0000;
+}
 
-    .message {
-      margin-top: 15px;
-      text-align: center;
-      color: green;
-    }
+.message {
+  margin-top: 18px;
+  text-align: center;
+  color: #00ff99;
+  font-weight: bold;
+}
+
   </style>
 </head>
 <body>
   <div class="header">
-    <h2>Add Member</h2>
+    <h2>Add Member</h2><div>
     <button onclick="window.location.href='dashboard.html'" style="background: #ffc107; border: none; padding: 10px 15px; border-radius: 5px; color: black;">Back to Dashboard</button>
-  </div>
+  </div></div>
 
   <div class="container">
     <form id="addMemberForm">
