--- a/create_bill.html
+++ b/create_bill.html
@@ -9,15 +9,74 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 
   <style>
-    body { font-family: Arial, sans-serif; padding: 20px; background: #f4f4f4; }
-    h2 { text-align: center; }
-    label { display: block; margin-top: 10px; }
-    input, select, button { width: 100%; padding: 8px; margin-top: 5px; }
-    .container { max-width: 500px; margin: auto; background: white; padding: 20px; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
-    .bill-preview { margin-top: 20px; padding: 15px; background: #fff; border: 1px solid #ccc; }
-    .btn { background-color: #28a745; color: white; border: none; cursor: pointer; margin-top: 15px; }
-    .btn:hover { background-color: #218838; }
-  </style>
+  body {
+    font-family: 'Segoe UI', sans-serif;
+    background: url('images/bill.avif') no-repeat center center fixed;
+    background-size: cover;
+    margin: 0;
+    padding: 40px 20px;
+    color: #fff;
+  }
+
+  h2 {
+    text-align: center;
+    margin-bottom: 25px;
+    color: #00ff99;
+    text-shadow: 1px 1px 5px #000;
+  }
+
+  label {
+    display: block;
+    margin-top: 15px;
+    font-weight: bold;
+  }
+
+  input, select {
+    width: 100%;
+    padding: 10px;
+    margin-top: 6px;
+    border-radius: 6px;
+    border: none;
+    background: #222;
+    color: #fff;
+    box-shadow: inset 0 0 5px #000;
+  }
+
+  .container {
+    max-width: 550px;
+    margin: auto;
+    background: rgba(0, 0, 0, 0.85);
+    padding: 25px;
+    border-radius: 12px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.6);
+  }
+
+  .bill-preview {
+    margin-top: 20px;
+    padding: 15px;
+    background: #111;
+    border-radius: 8px;
+    border: 1px solid #00ff99;
+    color: #ccc;
+  }
+
+  .btn {
+    background-color: #00ff99;
+    color: #000;
+    border: none;
+    border-radius: 6px;
+    padding: 10px;
+    cursor: pointer;
+    font-weight: bold;
+    margin-top: 20px;
+    transition: background 0.3s;
+  }
+
+  .btn:hover {
+    background-color: #00cc77;
+  }
+</style>
+
 </head>
 <body>
   <div class="container">
