--- a/diet.html
+++ b/diet.html
@@ -5,17 +5,112 @@
 <title>Admin - Diet Details</title>
 <link rel="icon" type="image/x-icon" href="gym.avif">
 <style>
-  body { font-family: Arial, sans-serif; max-width: 900px; margin: auto; padding: 20px; }
-  table { width: 100%; border-collapse: collapse; margin-top: 20px; }
-  th, td { border: 1px solid #ccc; padding: 8px; text-align: left; }
-  input, textarea, button { padding: 6px; margin: 4px 0; width: 100%; box-sizing: border-box; }
-  button { cursor: pointer; width: auto; }
-  .form-group { margin-bottom: 10px; }
-  .actions button { margin-right: 5px; }
+  body {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  margin: 0;
+  padding: 0;
+  background: url('images/diet.jpg') no-repeat center center fixed;
+  background-size: cover;
+  color: #f2f2f2;
+}
+
+.container {
+  max-width: 1000px;
+  margin: 60px auto;
+  padding: 30px;
+  background-color: rgba(0, 0, 0, 0.85);
+  border-radius: 15px;
+  box-shadow: 0 0 25px rgba(255, 0, 0, 0.3);
+}
+
+h1, h2 {
+  text-align: center;
+  color: #ff2e63;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+  letter-spacing: 1px;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+  background-color: rgba(255, 255, 255, 0.05);
+}
+
+th, td {
+  border: 1px solid #555;
+  padding: 10px;
+  text-align: left;
+  color: #f2f2f2;
+}
+
+th {
+  background-color: #ff2e63;
+  color: #fff;
+}
+
+input, textarea, button {
+  width: 100%;
+  padding: 10px;
+  margin-top: 5px;
+  margin-bottom: 15px;
+  border-radius: 5px;
+  border: none;
+  box-sizing: border-box;
+  font-size: 14px;
+}
+
+input, textarea {
+  background-color: #1f1f1f;
+  color: #fff;
+}
+
+input:focus, textarea:focus {
+  outline: 2px solid #ff2e63;
+}
+
+button {
+  background-color: #ff2e63;
+  color: #fff;
+  font-weight: bold;
+  text-transform: uppercase;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  padding: 10px 20px;
+  width: auto;
+  border-radius: 5px;
+}
+
+button:hover {
+  background-color: #e6003c;
+}
+
+.form-group {
+  margin-bottom: 12px;
+}
+
+.actions button {
+  margin-right: 5px;
+}
+
+@media screen and (max-width: 768px) {
+  .container {
+    margin: 30px 15px;
+    padding: 20px;
+  }
+
+  table, th, td {
+    font-size: 14px;
+  }
+}
+
+
 </style>
 </head>
 <body>
-
+ 
+  <div class="container">
 <h1>Diet Details Management</h1>
 
 <h2>Add / Update Diet Plan</h2>
@@ -66,6 +161,7 @@
     <tr><td colspan="7">Loading diet plans...</td></tr>
   </tbody>
 </table>
+ </div>
 
 <script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js";
