--- a/logout.html
+++ b/logout.html
@@ -4,6 +4,32 @@
   <meta charset="UTF-8" />
   <title>Logging out...</title>
   <link rel="icon" type="image/x-icon" href="gym.avif">
+  <style>
+  body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: #111;
+    color: #feca57;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    height: 100vh;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .logout-message {
+    background-color: #1a1a1a;
+    padding: 40px 60px;
+    border-radius: 15px;
+    box-shadow: 0 0 20px rgba(254, 202, 87, 0.3);
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+  }
+</style>
+
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js";
     import { getAuth, signOut } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-auth.js";
@@ -26,6 +52,8 @@
   </script>
 </head>
 <body>
+   <div class="logout-message">
   <p>Logging you out...</p>
+  </div>
 </body>
 </html>
