--- a/manage_members.html
+++ b/manage_members.html
@@ -7,66 +7,105 @@
   <script type="module" src="script/manage_members.js"></script>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: #f1f1f1;
-      margin: 0;
-      padding: 0;
-    }
+  font-family: 'Segoe UI', sans-serif;
+  background-image: url('images/member.avif'); /* Replace with your actual image path */
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  margin: 0;
+  padding: 0;
+  color: #fff;
+}
 
-    .header {
-      background-color: #343a40;
-      color: white;
-      padding: 15px 20px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
+.header {
+  background-color: rgba(0, 0, 0, 0.85);
+  color: white;
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 3px solid #ff3333;
+}
 
-    .header h2 {
-      margin: 0;
-    }
+.header h2 {
+  margin: 0;
+  font-weight: bold;
+  letter-spacing: 1px;
+}
 
-    .container {
-      max-width: 1000px;
-      margin: 30px auto;
-      background: white;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-    }
+.header button {
+  background-color: #ffc107;
+  color: #000;
+  font-weight: bold;
+  padding: 10px 15px;
+  border-radius: 6px;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
 
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 20px;
-    }
+.header button:hover {
+  background-color: #e0a800;
+}
 
-    table, th, td {
-      border: 1px solid #ccc;
-    }
+.container {
+  max-width: 1000px;
+  margin: 40px auto;
+  background: rgba(0, 0, 0, 0.9);
+  padding: 25px;
+  border-radius: 15px;
+  box-shadow: 0 0 20px rgba(255, 0, 0, 0.3);
+}
 
-    th, td {
-      padding: 12px;
-      text-align: center;
-    }
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+  color: #fff;
+}
 
-    button {
-      padding: 6px 12px;
-      margin: 0 3px;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-    }
+table, th, td {
+  border: 1px solid #555;
+}
 
-    .edit-btn {
-      background-color: #ffc107;
-      color: #000;
-    }
+th {
+  background-color: #222;
+  color: #ff4d4d;
+  padding: 14px;
+  font-weight: bold;
+}
 
-    .delete-btn {
-      background-color: #dc3545;
-      color: #fff;
-    }
+td {
+  background-color: rgba(255, 255, 255, 0.05);
+  padding: 12px;
+}
+
+button {
+  padding: 8px 14px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+.edit-btn {
+  background-color: #ffc107;
+  color: #000;
+}
+
+.edit-btn:hover {
+  background-color: #e0a800;
+}
+
+.delete-btn {
+  background-color: #dc3545;
+  color: #fff;
+}
+
+.delete-btn:hover {
+  background-color: #b02a37;
+}
+
   </style>
 </head>
 <body>
