--- a/member.html
+++ b/member.html
@@ -5,33 +5,61 @@
   <title>Member Dashboard</title>
   <link rel="icon" type="image/x-icon" href="gym.avif">
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 20px;
-      max-width: 800px;
-      margin: auto;
-    }
-    h1 { color: #2c3e50; }
-    .nav {
-      margin-top: 30px;
-      display: flex;
-      flex-direction: column;
-      gap: 15px;
-    }
-    .nav a {
-      display: block;
-      background-color: #3498db;
-      color: white;
-      padding: 12px;
-      text-align: center;
-      text-decoration: none;
-      border-radius: 5px;
-      font-weight: bold;
-    }
-    .nav a:hover {
-      background-color: #2980b9;
-    }
-  </style>
+  body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin: 0;
+    padding: 40px 20px;
+    min-height: 100vh;
+    background-image: url('images/bg.jpg'); /* 🔄 Replace with your actual background image filename */
+    background-size: cover;
+    background-position: center;
+    color: #f1f1f1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    backdrop-filter: brightness(0.7);
+  }
+
+  h1 {
+    color: #feca57;
+    font-size: 36px;
+    text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.7);
+  }
+
+  p {
+    color: #eee;
+    text-align: center;
+    max-width: 600px;
+    margin-bottom: 40px;
+    font-size: 18px;
+  }
+
+  .nav {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    width: 100%;
+    max-width: 400px;
+  }
+
+  .nav a {
+    background-color: rgba(52, 152, 219, 0.9);
+    color: white;
+    padding: 14px 20px;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 12px;
+    font-weight: bold;
+    font-size: 18px;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+  }
+
+  .nav a:hover {
+    background-color: rgba(41, 128, 185, 0.95);
+    transform: translateY(-3px);
+  }
+</style>
 </head>
 <body>
 
