--- a/monthly-report.html
+++ b/monthly-report.html
@@ -6,15 +6,98 @@
   <title>Monthly Report</title>
   <link rel="icon" type="image/x-icon" href="gym.avif">
   <style>
-    body { font-family: Arial, sans-serif; background: #f0f0f0; padding: 20px; }
-    .container { max-width: 800px; margin: auto; background: #fff; padding: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
-    h2 { text-align: center; }
-    button { background: #28a745; color: white; border: none; padding: 10px 15px; border-radius: 5px; cursor: pointer; margin: 10px 5px 20px 0; }
-    button:hover { background: #218838; }
-    table { width: 100%; border-collapse: collapse; margin-top: 15px; }
-    th, td { border: 1px solid #ddd; padding: 8px; text-align: left; }
-    th { background-color: #f2f2f2; }
-  </style>
+ body {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background: url('images/bg.jpg') no-repeat center center fixed;
+  background-size: cover;
+  padding: 30px 15px;
+  color: #f0f0f0;
+  min-height: 100vh;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.container {
+  max-width: 900px;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.75);
+  padding: 30px 40px;
+  border-radius: 15px;
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.7);
+  color: #f8f9fa;
+}
+
+h2 {
+  text-align: center;
+  font-weight: 700;
+  font-size: 2.5rem;
+  margin-bottom: 25px;
+  color: #ff7f50; /* Coral orange accent */
+  text-shadow: 1px 1px 4px #000;
+}
+
+button {
+  background: linear-gradient(45deg, #ff5722, #e64a19);
+  color: white;
+  border: none;
+  padding: 12px 20px;
+  border-radius: 8px;
+  cursor: pointer;
+  margin: 10px 8px 25px 0;
+  font-weight: 600;
+  transition: background 0.3s ease;
+  box-shadow: 0 4px 8px rgba(255, 87, 34, 0.6);
+}
+
+button:hover {
+  background: linear-gradient(45deg, #e64a19, #bf360c);
+  box-shadow: 0 6px 12px rgba(191, 54, 12, 0.8);
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 10px;
+  color: #f0f0f0;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+th, td {
+  border-bottom: 1px solid #444;
+  padding: 12px 15px;
+  text-align: left;
+}
+
+th {
+  background-color: #ff5722;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 0.05em;
+  color: #fff;
+}
+
+tbody tr:nth-child(even) {
+  background-color: rgba(255, 87, 34, 0.15);
+}
+
+tfoot th {
+  background-color: transparent;
+  color: #ff7f50;
+  font-size: 1.1rem;
+  padding-top: 15px;
+  text-align: right;
+}
+
+tfoot #totalAmount {
+  color: #ff7f50;
+  font-weight: 700;
+  text-align: left;
+}
+</style>
 </head>
 <body>
   <div class="container">
