--- a/my_profile.html
+++ b/my_profile.html
@@ -5,13 +5,67 @@
   <title>My Profile - Member</title>
   <link rel="icon" type="image/x-icon" href="gym.avif">
   <style>
-    body { font-family: Arial, sans-serif; padding: 20px; max-width: 600px; margin: auto; }
-    h1 { text-align: center; }
-    .profile-box { border: 1px solid #ccc; padding: 20px; border-radius: 8px; }
-    .field { margin-bottom: 10px; }
-    .label { font-weight: bold; }
-    #logout-btn { margin-top: 20px; padding: 8px 16px; cursor: pointer; }
-  </style>
+  body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin: 0;
+    padding: 40px 20px;
+    min-height: 100vh;
+    background-image: url('images/member.avif'); /* 🔁 Replace with your actual image file */
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    backdrop-filter: brightness(0.7);
+    color: #f1f1f1;
+  }
+
+  h1 {
+    color: #feca57;
+    font-size: 36px;
+    margin-bottom: 30px;
+    text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.7);
+  }
+
+  .profile-box {
+    background-color: rgba(0, 0, 0, 0.7);
+    padding: 30px;
+    border-radius: 12px;
+    max-width: 500px;
+    width: 100%;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+  }
+
+  .field {
+    margin-bottom: 15px;
+    font-size: 18px;
+  }
+
+  .label {
+    font-weight: bold;
+    color: #feca57;
+  }
+
+  #logout-btn {
+    margin-top: 30px;
+    padding: 12px 24px;
+    font-size: 16px;
+    font-weight: bold;
+    color: white;
+    background-color: #e74c3c;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.4);
+  }
+
+  #logout-btn:hover {
+    background-color: #c0392b;
+    transform: translateY(-2px);
+  }
+</style>
+
 </head>
 <body>
 
