--- a/notifications.html
+++ b/notifications.html
@@ -6,20 +6,86 @@
   <title>Send Notifications - Admin</title>
   <link rel="icon" type="image/x-icon" href="gym.avif">
   <style>
-    body { font-family: Arial, sans-serif; padding: 20px; max-width: 600px; margin: auto; background: #f9f9f9; }
-    h2 { text-align: center; }
-    label { display: block; margin-top: 15px; }
-    select, textarea, button {
-      width: 100%; padding: 10px; margin-top: 5px; border-radius: 4px; border: 1px solid #ccc;
-      box-sizing: border-box;
+  body {
+    font-family: 'Roboto', Arial, sans-serif;
+    max-width: 600px;
+    margin: 50px auto;
+    padding: 30px;
+    background:
+      linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+      url('images/login.jpg') no-repeat center center fixed;
+    background-size: cover;
+    color: #e0e0e0;
+    border-radius: 14px;
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.85);
+  }
+
+  h2 {
+    text-align: center;
+    margin-bottom: 35px;
+    color: #ff6f61;
+    text-shadow: 1px 1px 7px #000;
+    font-weight: 700;
+    font-size: 2.2rem;
+  }
+
+  label {
+    display: block;
+    margin-top: 20px;
+    font-weight: 600;
+    text-shadow: 0 0 4px #000;
+  }
+
+  select, textarea, button {
+    width: 100%;
+    padding: 14px 12px;
+    margin-top: 8px;
+    border-radius: 10px;
+    border: 1.8px solid #333;
+    background-color: rgba(40, 40, 40, 0.9);
+    color: #eee;
+    font-size: 1rem;
+    box-sizing: border-box;
+    transition: border-color 0.3s ease, background-color 0.3s ease;
+    backdrop-filter: blur(5px);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    resize: vertical;
+  }
+
+  select:hover, textarea:hover {
+    border-color: #ff6f61;
+    background-color: rgba(55, 55, 55, 0.95);
+  }
+
+  button {
+    background-color: #ff6f61;
+    border: none;
+    color: #111;
+    font-weight: 700;
+    cursor: pointer;
+    margin-top: 28px;
+    box-shadow: 0 0 15px #ff6f61aa;
+    transition: background-color 0.3s ease, box-shadow 0.3s ease;
+  }
+
+  button:hover {
+    background-color: #e65a4e;
+    box-shadow: 0 0 22px #e65a4ecc;
+  }
+
+  /* Responsive tweaks */
+  @media (max-width: 640px) {
+    body {
+      margin: 30px 15px;
+      padding: 25px;
     }
-    button {
-      background-color: #007bff; color: white; border: none; cursor: pointer;
+    h2 {
+      font-size: 1.8rem;
+      margin-bottom: 25px;
     }
-    button:hover {
-      background-color: #0056b3;
-    }
-  </style>
+  }
+</style>
+
 </head>
 <body>
 
