--- a/supplement_store_member.html
+++ b/supplement_store_member.html
@@ -5,13 +5,68 @@
   <title>Supplement Store</title>
   <link rel="icon" type="image/x-icon" href="gym.avif">
   <style>
-    body { font-family: Arial, sans-serif; max-width: 900px; margin: auto; padding: 20px; }
-    table { width: 100%; border-collapse: collapse; margin-top: 20px; }
-    th, td { border: 1px solid #ccc; padding: 8px; text-align: left; }
+    body {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  margin: 0;
+  padding: 0;
+  background: url('images/supplement.jpg') no-repeat center center fixed;
+  background-size: cover;
+  color: #fff;
+}
+
+.container {
+  max-width: 1000px;
+  margin: 80px auto;
+  padding: 30px;
+  background-color: rgba(0, 0, 0, 0.85);
+  border-radius: 15px;
+  box-shadow: 0 0 20px rgba(255, 0, 0, 0.4);
+}
+
+h1 {
+  text-align: center;
+  font-size: 32px;
+  color: #feca57;
+  margin-bottom: 25px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+  background-color: #1a1a1a;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 0 10px rgba(254, 202, 87, 0.2);
+}
+
+th, td {
+  padding: 12px;
+  text-align: left;
+  border-bottom: 1px solid #444;
+}
+
+th {
+  background-color: #feca57;
+  color: #000;
+  text-transform: uppercase;
+  font-size: 14px;
+}
+
+td {
+  color: #ddd;
+}
+
+tr:hover {
+  background-color: rgba(255, 255, 255, 0.05);
+}
+
   </style>
 </head>
 <body>
-
+<div class="container">
   <h1>Available Supplements</h1>
 
   <table>
@@ -27,7 +82,7 @@
       <tr><td colspan="4">Loading supplements...</td></tr>
     </tbody>
   </table>
-
+</div>
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js";
     import {
