--- a/user_view_bills.html
+++ b/user_view_bills.html
@@ -8,12 +8,80 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
   <style>
-    body { font-family: Arial, sans-serif; background: #f4f4f4; padding: 20px; }
-    h2 { text-align: center; }
-    .bill { background: #fff; border: 1px solid #ccc; padding: 15px; margin: 15px auto; max-width: 600px; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
-    .btn { background-color: #007bff; color: white; padding: 10px 15px; border: none; border-radius: 5px; cursor: pointer; margin-top: 10px; }
-    .btn:hover { background-color: #0056b3; }
-  </style>
+  body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin: 0;
+    min-height: 100vh;
+    padding: 40px 20px;
+    background-image: url('images/bill.avif'); /* Replace with your gym background image */
+    background-size: cover;
+    background-position: center;
+    color: #f1f1f1;
+    backdrop-filter: brightness(0.7);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  h2 {
+    font-size: 32px;
+    margin-bottom: 30px;
+    color: #feca57;
+    text-shadow: 2px 2px 5px rgba(0,0,0,0.7);
+  }
+
+  #billsContainer {
+    width: 100%;
+    max-width: 650px;
+  }
+
+  .bill {
+    background-color: rgba(0, 0, 0, 0.75);
+    border-radius: 12px;
+    padding: 20px 25px;
+    margin-bottom: 25px;
+    box-shadow: 0 6px 15px rgba(0,0,0,0.6);
+    color: #f1f1f1;
+  }
+
+  .bill h3 {
+    margin-top: 0;
+    margin-bottom: 15px;
+    color: #feca57;
+    text-shadow: 1px 1px 3px rgba(0,0,0,0.6);
+  }
+
+  .bill p {
+    font-size: 17px;
+    line-height: 1.4;
+    margin: 6px 0;
+  }
+
+  .btn {
+    margin-top: 15px;
+    background-color: #e67e22;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 10px;
+    font-weight: 600;
+    cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.4);
+  }
+
+  .btn:hover {
+    background-color: #d35400;
+    transform: translateY(-2px);
+  }
+
+  p, #billsContainer p {
+    text-align: center;
+    font-size: 18px;
+    color: #f1f1f1cc;
+  }
+</style>
+
 </head>
 <body>
   <h2>My Bills</h2>
