--- a/view-notifications.html
+++ b/view-notifications.html
@@ -6,15 +6,124 @@
   <title>View Notifications</title>
   <link rel="icon" type="image/x-icon" href="gym.avif">
   <style>
-    body { font-family: Arial, sans-serif; padding: 20px; background: #f4f4f4; }
-    h2 { text-align: center; }
-    .container { max-width: 600px; margin: auto; background: white; padding: 20px; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
-    .notification { padding: 10px; border-bottom: 1px solid #ddd; }
-    .notification:last-child { border-bottom: none; }
-    label, input, button { width: 100%; margin-top: 10px; padding: 8px; }
-    button { background-color: #007bff; color: white; border: none; cursor: pointer; }
-    button:hover { background-color: #0056b3; }
-  </style>
+  /* Full page setup */
+  body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin: 0;
+    min-height: 100vh;
+    background-image: url('images/login.jpg'); /* Replace with your gym background image */
+    background-size: cover;
+    background-position: center;
+    padding: 40px 20px;
+    color: #f1f1f1;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+  }
+
+  /* Container with semi-transparent background for readability */
+  .container {
+    background-color: rgba(0, 0, 0, 0.75);
+    max-width: 600px;
+    width: 100%;
+    border-radius: 12px;
+    padding: 30px 25px;
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.7);
+  }
+
+  /* Heading style */
+  h2 {
+    text-align: center;
+    font-size: 32px;
+    margin-bottom: 30px;
+    color: #feca57;
+    text-shadow: 2px 2px 6px rgba(0,0,0,0.8);
+  }
+
+  /* Label style */
+  label {
+    font-weight: 600;
+    font-size: 16px;
+    display: block;
+    margin-bottom: 8px;
+    color: #f1f1f1cc;
+  }
+
+  /* Input fields */
+  input[type="email"] {
+    width: 100%;
+    padding: 12px 15px;
+    border-radius: 10px;
+    border: none;
+    font-size: 16px;
+    outline: none;
+    margin-bottom: 15px;
+    box-sizing: border-box;
+  }
+
+  /* Button style */
+  button {
+    width: 100%;
+    background-color: #e67e22;
+    color: white;
+    padding: 14px;
+    font-size: 17px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    font-weight: 700;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.5);
+    transition: background-color 0.3s ease, transform 0.2s ease;
+  }
+
+  button:hover {
+    background-color: #d35400;
+    transform: translateY(-2px);
+  }
+
+  /* Notifications output */
+  #notifications {
+    margin-top: 25px;
+  }
+
+  /* Single notification style */
+  .notification {
+    background-color: rgba(255, 255, 255, 0.1);
+    padding: 15px 20px;
+    border-radius: 12px;
+    margin-bottom: 15px;
+    box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
+  }
+
+  .notification p {
+    margin: 5px 0;
+    font-size: 16px;
+    line-height: 1.4;
+  }
+
+  .notification p strong {
+    color: #feca57;
+  }
+
+  .notification p small {
+    color: #ddd;
+  }
+
+  /* Responsive */
+  @media (max-width: 640px) {
+    .container {
+      padding: 20px 15px;
+    }
+    h2 {
+      font-size: 28px;
+    }
+    button, input[type="email"] {
+      font-size: 15px;
+      padding: 12px;
+    }
+  }
+</style>
+
 </head>
 <body>
   <div class="container">
