--- a/view_bills.html
+++ b/view_bills.html
@@ -8,45 +8,67 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 20px;
-      background: #f9f9f9;
-    }
-    h2 {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-    table {
-      border-collapse: collapse;
-      width: 100%;
-      background: white;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-    }
-    th, td {
-      padding: 12px 15px;
-      border: 1px solid #ddd;
-      text-align: left;
-    }
-    th {
-      background-color: #28a745;
-      color: white;
-    }
-    tr:nth-child(even) {
-      background-color: #f4f4f4;
-    }
-    button.download-btn {
-      background-color: #28a745;
-      color: white;
-      border: none;
-      padding: 6px 12px;
-      cursor: pointer;
-      border-radius: 4px;
-    }
-    button.download-btn:hover {
-      background-color: #218838;
-    }
-  </style>
+  body {
+    font-family: 'Segoe UI', sans-serif;
+    margin: 30px;
+    background: url('images/bill.avif') no-repeat center center fixed;
+    background-size: cover;
+    color: #fff;
+  }
+
+  h2 {
+    text-align: center;
+    margin-bottom: 25px;
+    color: #00ff99;
+    text-shadow: 1px 1px 5px #000;
+  }
+
+  table {
+    width: 100%;
+    border-collapse: collapse;
+    background: rgba(0, 0, 0, 0.85);
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.6);
+    border-radius: 8px;
+    overflow: hidden;
+  }
+
+  th, td {
+    padding: 14px 18px;
+    border: 1px solid #444;
+    text-align: left;
+    color: #eee;
+  }
+
+  th {
+    background-color: #00cc88;
+    color: #000;
+    font-weight: bold;
+  }
+
+  tr:nth-child(even) {
+    background-color: rgba(255, 255, 255, 0.05);
+  }
+
+  tr:hover {
+    background-color: rgba(255, 255, 255, 0.08);
+  }
+
+  button.download-btn {
+    background-color: #00ff99;
+    color: #000;
+    border: none;
+    padding: 8px 14px;
+    cursor: pointer;
+    border-radius: 6px;
+    font-weight: bold;
+    transition: background 0.3s ease;
+  }
+
+  button.download-btn:hover {
+    background-color: #00cc77;
+  }
+</style>
+
 </head>
 <body>
 
